@@ -1,3 +1,9 @@
+2008-08-29  Vivien Malerba <malerba@gnome-db.org>
+
+	* doc/C/tmpl/gda-pmodel-user.sgml: adding mising file
+	* tests/data-models/Makefile.am:
+	* tests/data-models/check_pmodel.c: corrections to have "make distcheck" run
+
 2008-08-28  Vivien Malerba <malerba@gnome-db.org>
 
 	* libgda/handlers/gda-handler-numerical.c:
